--- a/client/src/app/ui/user/user.component.html
+++ b/client/src/app/ui/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <nav id="sidebar">
-      <h4>Moj nalog</h4>
+      <h4 class="p-mb-2">Moj nalog</h4>
       <ul class="list-unstyled user-sidebar">
         <a routerLink="./details">
           <li>
@@ -16,10 +16,9 @@
         </a>
       </ul>
     </nav>
-  
+
     <div class="user-data-outlet" style="margin: 5px;position: relative;">
       <router-outlet></router-outlet>
     </div>
-  
+
   </div>
-  
