--- a/client/src/app/shared/menu-form/menu-form.component.html
+++ b/client/src/app/shared/menu-form/menu-form.component.html
@@ -39,7 +39,7 @@
             <i class="fas fa-check"></i>
             Potvrdi
           </button>
-          <button class="btnn btnn-b ric" pRipple (click)="onCancle()">
+          <button class="btnn btnn-b ric" pRipple (click)="onCancel()">
               <i class="fas fa-times"></i>
               Poništi
           </button>
