--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -169,3 +169,39 @@ a:hover{
 .p-inputtext:enabled:hover{
   box-shadow: none;
 }
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+  font-family: MRegular;
+  font-size: 14px;
+  color: white;
+  padding: 8px 14px;
+  background-color: var(--blue-500);
+  display: inline-block;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+  background-color: var(--blue-600);
+}
+
+.inputfile + label {
+	cursor: pointer; /* "hand" cursor */
+}
+
+.inputfile:focus + label {
+	outline: 1px dotted #000;
+	outline: -webkit-focus-ring-color auto 5px;
+}
+
+.inputfile + label * {
+	pointer-events: none;
+}
