--- a/client/src/app/ui/admin/menues/menues.component.css
+++ b/client/src/app/ui/admin/menues/menues.component.css
@@ -182,3 +182,24 @@
 .dish-control-group i:hover{
   background-color: white;
 }
+
+.active-edit{
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  background-color: #5caef1;
+}
+.active-edit .light-text{
+  color: #333
+}
+.closeImg{
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  padding: 0px 2px;
+  transition: all 200ms ease-in;
+}
+.closeImg:hover i {
+  color: #f33a21;
+}
