--- a/client/src/app/ui/admin/menues/menues.component.css
+++ b/client/src/app/ui/admin/menues/menues.component.css
@@ -128,13 +128,34 @@
   display: inline-flex;
   text-align: center;
   align-items: center;
+  position: relative;
+  cursor: pointer;
 }
+
 .att-list > span > span{
   display: inline-block;
   height: 15px;
   color: #2196F3;
   font-size: 12px;
   margin-left: 10px;
+}
+
+.att-list > span:hover .att-list-action-group{
+  display: block;
+}
+
+.att-list-action-group{
+  position: absolute;
+  top: -15px;
+  width: 48px;
+  border-radius: 15px;
+  background-color: rgba(82, 82, 82, 0.185);
+  color: #5caef1;
+  display: none;
+}
+
+.att-list-action-group i:hover{
+  color: #2196F3;
 }
 
 .new-att{
